--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "license": "All Rights Reserved",
   "dependencies": {},
   "devDependencies": {
+    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-html-replace": "^1.5.5",
     "gulp-react": "^3.1.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "reactify": "^1.1.1",
+    "reflux": "^0.3.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
