--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "All Rights Reserved",
   "dependencies": {},
   "devDependencies": {
+    "react": "^0.14.3",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
