--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "license": "All Rights Reserved",
   "dependencies": {},
   "devDependencies": {
-    "react": "^0.14.3",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-mocha": "^2.2.0",
     "gulp-react": "^3.1.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.7",
     "reactify": "^1.1.1",
     "reflux": "^0.3.0",
