--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-mocha": "^2.2.0",
     "gulp-react": "^3.1.0",
