--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "All Rights Reserved",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
