Add endpoint for Service Status Check

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,8 @@
 package: .
 import:
 - package: github.com/gorilla/mux
+- package : github.com/stretchr/testify
+subpackages:
+  - assert
+  - mock
+  - require
