Add tests for insert to do item

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,8 +1,6 @@
 package: .
 import:
 - package: github.com/gorilla/mux
-- package : github.com/stretchr/testify
-subpackages:
-  - assert
-  - mock
-  - require
+- package: github.com/stretchr/testify
+- package: github.com/DATA-DOG/go-sqlmock
+- package: github.com/jmoiron/sqlx
