--- a/db/dbconf.yml
+++ b/db/dbconf.yml
@@ -1,4 +1,4 @@
 development:
     driver: postgres
-    open: user=tinamt dbname=todoApp sslmode=disable
+    open: user=tinamt dbname=todo_app sslmode=disable
 
