--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "nock": "^8.0.0",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.7",
     "reactify": "^1.1.1",
     "reflux": "^0.3.0",
     "sinon": "^1.17.3",
+    "superagent": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
