--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "jquery": "^3.1.0",
+    "jsdom-no-contextify": "^3.1.0",
     "nock": "^8.0.0",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.7",
